# UBA

./: README.md  README.md~
AA/: apunte.md  machete_compacto.txt  notas_para_el_machete.md
AA/guia3/: ejercicio6.md  ejercicio7.md  ejercicio8.md  ejercicio9.md
AA/guia4/: ejercicio2.md  ejercicio3.md  ejercicio6.md  ejercicio7.md  ejercicio8.md
AA/guia5/: ejercicio01.md  ejercicio03.md  ejercicio04.md  ejercicio05.md  ejercicio06.md  ejercicio07.md  ejercicio08.md
AA/guia6/: ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio05.md  ejercicio06.md  ejercicio07.md  ejercicio08.md  ejercicio09.md  ejercicio10.md  ejercicio11.md
AA/guia7/: ejercicio01.md  ejercicio02.md  ejercicio03.md
AA/guia8/: ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio04.md
BD/: JuanDeliaEntrega.sql  consultas_optmizacion.sql
BD/Ejercicios Optimizacion/Ejercicios clase/: consulta1.sql  consulta2.sql  consulta3.sql  consulta4.sql  consulta5.sql  consulta6.sql  consulta7.sql  ejercicio10.sql  ejercicio8.sql  ejercicio9.sql
BD/Ejercicios Optimizacion/ejercicios_labo_primer_cuatri_2025/: ejercicio1.sql  ejercicio2.sql  ejercicio3.sql  ejercicio4.sql  ejercicio5.sql
BD/Ejercicios SQL/ejercicio2/: ejercicio2_2.sql  ejercicio2_5.sql
BD/Ejercicios SQL/ejercicios clase/: ejercicio1.sql  ejercicio2.sql  ejercicio3.sql  ejercicio4.sql  ejercicio5.sql  ejercicio6.sql  ejercicio7.sql  ejercicio8.sql  ejercicio9.sql
BD/Ejercicios SQL/ejercicios_guia/: ejercicio2_1.sql  ejercicio2_3.sql  ejercicio2_4.sql  ejercicio2_6.sql
BD/Ejercicios SQL/ejercicios_labo_primer_cuatri_2025/: ejercicio1.sql  ejercicio2.sql  ejercicio3.sql  ejercicio4.sql  soluciones.sql
Blockchain/HW1/: Blockchains_HW1.aux  Blockchains_HW1.tex  transfer.sol
Blockchain/HW2/: Blockchains_HW2.aux  Blockchains_HW2.tex
Blockchain/HW2/generador hashes/: .gitignore  hashes.js  package-lock.json
Blockchain/HW2/matching_pennies/: package-lock.json  package.json  tsconfig.json
Blockchain/HW3/: DElia_HW3.tex
Blockchain/HW3/custom_token/: package-lock.json  package.json
Blockchain/HW4/: Blockchains_HW4.tex
Complejidad/: readme.md
Complejidad/guia 2/: ejercicio 6.md  ejercicio1.md  ejercicio2.md  ejercicio3.md  ejercicio4.md  ejercicio5.md  ejercicio8.md  ejercicio9.md
Complejidad/guia2/: 1_header.md  ejercicio01.md  ejercicio06.md  ejercicio07.md  ejercicio09.md  ejercicio1.md  ejercicio10.md  ejercicio2.md  ejercicio3.md  ejercicio4.md  ejercicio5.md  ejercicio6.md  ejercicio7.md  ejercicio8.md  ejercicio9.md
Complejidad/guia3/: 1_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio04.md  ejercicio05.md  ejercicio08.md  ejercicio09.md  ejercicio10.md  ejercicio11.md  ejercicio12.md  ejercicio13.md  ejercicio14.md  ejercicio5.md  ejercicio6.md  ejercicio7.md
Complejidad/guia4/: 1_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio05.md
Complejidad/guia5/: 1_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio08.md  ejercicio09.md  ejercicio10.md  ejercicio11.md  ejercicio12.md  ejercicio13.md
Complejidad/guia6/: 0_header.md  ejercicio02.md  ejercicio03.md  ejercicio04.md  ejercicio05.md
Complejidad/guia7/: 0_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio08.md  ejercicio09.md  ejercicio10.md  ejercicio11.md
Complejidad/guia8/: 0_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio04.md  ejercicio05.md  ejercicio06.md  ejercicio09.md  ejercicio10.md  ejercicio11.md  ejercicio15.md  ejercicio16.md
Robotica/Archivos para uso de Docker y ROS2-20250929./: start-docker.sh
Robotica/Taller 03 Actuacion/Taller3_2025/: Taller3_2025.ino
Robotica/Taller 4 Comportamientos Reactivos/Taller4_2025/: Taller4_2025.ino
Robotica/taller_2/: ej3.ino  ejercicio_1.ino
Robotica/talleres/Taller 5 Intro a ROS2/ros_intro/: CMakeLists.txt  package.xml
Robotica/talleres/Taller 5 Intro a ROS2/ros_intro/coppeliaSim/: ros_intro.ttt
Robotica/talleres/Taller 5 Intro a ROS2/ros_intro/src/: keys_to_twist.cpp  keys_to_twist.h  keys_to_twist_node.cpp
Robotica/talleres/Taller7/lazo_abierto/: CMakeLists.txt  package.xml
Robotica/talleres/Taller7/lazo_abierto/coppeliaSim/: lazo_abierto.ttt
Robotica/talleres/Taller7/lazo_abierto/include/lazo_abierto/: FeedForwardController.h  TrajectoryFollower.h
Robotica/talleres/Taller7/lazo_abierto/launch/: lazo_abierto.launch.py
Robotica/talleres/Taller7/lazo_abierto/src/: FeedForwardController.cpp  TrajectoryFollower.cpp  trajectory_follower_node.cpp  trajectory_generator_node.cpp  trajectory_waypoints_node.cpp
Robotica/talleres/Taller8/lazo_cerrado/: CMakeLists.txt  package.xml
Robotica/talleres/Taller8/lazo_cerrado/launch/: lazo_cerrado.launch.py
Robotica/talleres/Taller8/lazo_cerrado/src/: KinematicPositionController.cpp  KinematicPositionController.h
Robotica/talleres/taller_02/: ej2_int.ino  ej2_polling.ino
Robotica/talleres/taller_04/: Taller4_2025.ino
SO/: readme.md
SO/Practica 1/: Makefile  ejercicio15  ejercicio15.c  ejercicio16.c  ejercicio17.c  ejercicio9  ejercicio9.c  readme.md
SO/Practica 1/ejercicio19a/: client.c  server.c
SO/Practica 1/ejercicio19b/: Makefile  client.c  server.c
SO/Practica 1/ejercicio20/: client.c  (+1 more)
SO/Practica 2/: ejercicio1.md  ejercicio2.md  ejercicio3.md  ejercicio4.md  ejercicio5.md  ejercicio6.md  ejercicio7.md
SO/Practica 3/: 0_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio04.md  ejercicio05.md  ejercicio06.md  ejercicio07.md  ejercicio08.md  ejercicio09.md  ejercicio1.md  ejercicio10.md  ejercicio11.md  ejercicio2.md  ejercicio3.md
SO/Practica 4/: 0_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio04.md  ejercicio05.md  ejercicio08.md  ejercicio09.md  ejercicio10.md  ejercicio11..md  ejercicio12.md  ejercicio13.md  ejercicio5.md
SO/Practica 5/: 0_header.md  ejercicio01.md  ejercicio02.md  ejercicio03.md  ejercicio04.md  ejercicio06.md  ejercicio07.md
SO/Practica 6/: 0_header.md  ejercicio01.md  ejercicio010.md  ejercicio02.md  ejercicio03.md  ejercicio09.md
TP-LFAC/: consigna.md
(+131 files in other folders)
