<?xml version="1.0"?>
<package format="3">
  <name>lazo_abierto</name>
  <version>0.0.0</version>
  <description>Taller de control de trayectoria a lazo abierto con un modelo de tracción diferencial.</description>

  <maintainer email="francisco.raverta@gmail.com">FranciscoRaverta</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>robmovil_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
